[FIX] website: make some mega menu templates more responsive in mobile
Some mega menu templates do not look good in mobile view, depending on
the size of the text written in them, especially since the mobile menu
is a sidebar (= offcanvas) and not a hamburger (= collapse) anymore.
Indeed, at some breakpoints, the classes force the elements to have a
certain width, even though the width of the mobile menu is now always
the same under the `LG` breakpoint. This results in element overlapping,
which does not look good.

This commit fixes this issue by adding more freedom to these mega menu
templates at the problematic breakpoints, so they can be more responsive
with their content, while still looking good. The fact that we can now
resize on mobile has also been taken into account.

Step to reproduce:
- In the menu editor, add a mega menu.
- In edit mode, click on the mega menu.
- Select the "Images Subtitles" template.
- Save and resize down the screen until it toggles the mobile view.
- Open the mega menu.
=> The different items are overlapping, because of the `col-sm-6` class.
- Go again in edit mode and select the "Odoo Menu" template.
- For the first menu, write a really big word (it can easily happen in
German) as a title (e.g. "Foto- und Fine Art Großformatdrucker").
- Save and resize down until the mobile view is toggled.
- Open the mega menu.
=> The first two menus content overlap.

opw-4096112

closes odoo/odoo#177285

X-original-commit: c7a453a9466a455586da42c1c232199a06f0286a

--- a/addons/website/static/src/snippets/s_mega_menu_menus_logos/000.scss
+++ b/addons/website/static/src/snippets/s_mega_menu_menus_logos/000.scss
@@ -8,4 +8,11 @@
         // Apply color transparency to match with the preset used
         border-color: rgba(0, 0, 0, .05) !important;
     }
+
+    .row > div.col-sm-6 {
+        @include media-breakpoint-between(sm, lg) {
+            min-width: min-content;
+            flex-grow: 1;
+        }
+    }
 }
